# arithmetic_expression_lab3

./: ArithmeticExpression.h  CMakeLists.txt  IFinalStateMachine.h  Lexem.h  LexisMachine.h  PostfixConverter.h  Project1.sln  Project1.vcxproj  Project1.vcxproj.filters  Solver.h  SyntaxisMachine.h  TQueue.h  TStack.h  Validator.h  main.cpp
ArithmeticsExpressionLib/include/: AnswerGiver.h  PostfixConverter.h  Solver.h  SyntaxisMachine.h
ArithmeticsExpressionLib/src/: ArithmeticExpression.cpp  FSolver.cpp
Project1/x64/Debug/: Project1.exe.recipe  Project1.ilk  main.obj.enc  vc143.idb
Project1/x64/Debug/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Project1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
include/: ArithmeticExpression.h  Exceptions.h  FSolver.h  Handler.h  ISolver.h  Lexem.h  LexisMachine.h  TQueue.h  TStack.h
samples/: CMakeLists.txt  sample.cpp
src/: AnswerGiver.cpp  ArithmeticExpression.cpp  CMakeLists.txt  Handler.cpp  ISolver.cpp  Lexem.cpp  LexisMachine.cpp  PostfixConverter.cpp  Solver.cpp  SyntaxisMachine.cpp
test/: CMakeLists.txt  t_arithmeticexpression.cpp  test_tqueue.cpp  test_tstack.cpp
